avahi (0.6.28-1) UNRELEASED; urgency=low

  * New upstream release.
  * Remove debian/patches/02_avahi_client.patch, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Thu, 18 Nov 2010 06:12:26 +0100

avahi (0.6.27-3) unstable; urgency=low

  * debian/control
    - Update Vcs-* fields: Move packaging from svn to git.
    - Bump Standards-Version to 3.9.1. No further changes.
  * debian/patches/02_avahi_client.patch
    - Replace patch with upstream commit 9a4db66 which uses Ping() to test
      whether avahi is around.

 -- Michael Biebl <biebl@debian.org>  Thu, 18 Nov 2010 05:47:11 +0100

avahi (0.6.27-2) unstable; urgency=low

  * Added debian/patches/02_avahi_client.patch:
    - Let the client check if the daemon is already running instead of just
      trying to start it, which doesn't work if there is no service file (the
      service file is just meant for systems using system.d) (Closes: #590760)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 15 Aug 2010 23:29:26 +0100

avahi (0.6.27-1) unstable; urgency=low

  * New upstream release.
  * Remove patches
    - debian/patches/02_have_gtk2_build_fix.patch (merged upstream)
    - debian/patches/26_am_maintainer_mode.patch (no longer required)
    - debian/patches/99_autoreconf.patch (no longer required)
  * Drop Howl compatibility library. (Closes: #588389)
    Development of the original Howl implementation has been discontinued and
    there are no more reverse dependencies in the Debian archive since lenny.

 -- Michael Biebl <biebl@debian.org>  Sun, 25 Jul 2010 23:20:51 +0200

avahi (0.6.26-1) unstable; urgency=low

  * New upstream release.
    - Make avahi limits configurable instead of setting them during compile
      time and bump up the default limits. (Closes: #557931)
    - Clarify avahi-daemon.conf.5 man page. (Closes: #549445)
    - Don't ignore mDNS response records containing link-local addresses.
      (Closes: #567067)
  * Remove patches that were merged upstream