@@ -6,8 +6,7 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>,
            Sebastian Dröge <slomo@debian.org>,
            Loic Minier <lool@dooz.org>,
            Michael Biebl <biebl@debian.org>
-Build-Depends: debhelper (>= 7),
-               cdbs (>= 0.4.43),
+Build-Depends: debhelper (>= 7.0.50~),
                pkg-config,
                python-support (>= 0.6),
                libcap-dev (>= 1:2.16) [linux-any],
