@@ -1,62 +1,65 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/buildvars.mk
-include debian/clean-la.mk
+%:
+	dh $@
 
-# List any files which are not installed
-include /usr/share/cdbs/1/rules/utils.mk
-common-binary-post-install-arch:: list-missing
+DEB_HOST_ARCH    ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+DEB_HOST_ARCH_OS ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
+
+# Only enable the stack protector on certain archs
+ifeq (,$(filter $(DEB_HOST_ARCH), powerpc s390 sparc amd64 i386 lpia))
+	CONFFLAGS += --disable-stack-protector
+endif
+ifneq (linux,$(DEB_HOST_ARCH_OS))
+	CONFFLAGS += --disable-autoipd
+endif
 
 # Ensure at build time that the library has no dependencies on undefined
 # symbols, and speed up loading.
 LDFLAGS += -Wl,-z,defs -Wl,-O1
 
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-compat-libdns_sd \
-                             --disable-mono --disable-monodoc \
-                             --disable-gtk3
+override_dh_auto_configure:
+	dh_auto_configure -- $(CONFFLAGS) \
+		--enable-compat-libdns_sd \
+		--disable-mono --disable-monodoc \
+		--disable-gtk3
 
-# Only enable the stack protector on certain archs
-ifeq (,$(filter $(DEB_HOST_ARCH), powerpc s390 sparc amd64 i386 lpia))
-	DEB_CONFIGURE_EXTRA_FLAGS += --disable-stack-protector
-endif
 
-ifneq (linux,$(DEB_HOST_ARCH_OS))
-	DEB_CONFIGURE_EXTRA_FLAGS += --disable-autoipd
-endif
-
-DEB_UPDATE_RCD_PARAMS_avahi-daemon := start 14 2 3 4 5 . stop 86 0 1 6 .
-DEB_UPDATE_RCD_PARAMS_avahi-dnsconfd := start 16 2 3 4 5 . stop 84 0 1 6 .
-
-DEB_INSTALL_DOCS_ALL += docs/README docs/NEWS
-
-common-build-arch::
+override_dh_auto_build:
+	dh_auto_build
 	# create an up to date PO template
 	cd po; intltool-update -p --verbose
 
-clean::
+override_dh_auto_clean:
+	dh_auto_clean
 	rm -f po/*.pot
 
-binary-install/avahi-discover::
-	dh_pysupport -p$(cdbs_curpkg)
-
-binary-install/python-avahi::
-	dh_pysupport -p$(cdbs_curpkg)
-
-install/avahi-autoipd::
-	dh_installifupdown -p$(cdbs_curpkg)
-
-install/avahi-daemon::
-	dh_installifupdown -p$(cdbs_curpkg)
+override_dh_auto_install:
+	dh_auto_install
 	install -D -o root -g root -m 755 debian/avahi-daemon.resolvconf \
-		debian/$(cdbs_curpkg)/etc/resolvconf/update-libc.d/avahi-daemon
+		debian/avahi-daemon/etc/resolvconf/update-libc.d/avahi-daemon
 	install -D -o root -g root -m 755 debian/avahi-daemon-check-dns.sh \
-		debian/$(cdbs_curpkg)/usr/lib/avahi/avahi-daemon-check-dns.sh
-
+		debian/avahi-daemon/usr/lib/avahi/avahi-daemon-check-dns.sh
 ifeq (linux,$(DEB_HOST_ARCH_OS))
-common-install-impl::
-	mv $(DEB_DESTDIR)/etc/dhcp/dhclient-exit-hooks.d/avahi-autoipd \
-		$(DEB_DESTDIR)/etc/dhcp/dhclient-exit-hooks.d/zzz_avahi-autoipd
+	mv debian/tmp/etc/dhcp/dhclient-exit-hooks.d/avahi-autoipd \
+		debian/tmp/etc/dhcp/dhclient-exit-hooks.d/zzz_avahi-autoipd
 endif
+	# cleanup dependency_libs from libtool .la files
+	for file in $(wildcard debian/tmp/usr/lib/*.la); do \
+		sed -i "/dependency_libs/ s/'.*'/''/" $$file ; \
+	done
+
+# List any files which are not installed
+override_dh_install:
+	dh_install --list-missing
+
+override_dh_installinit:
+	dh_installinit -pavahi-daemon -- start 14 2 3 4 5 . stop 86 0 1 6 .
+	dh_installinit -pavahi-dnsconfd -- start 16 2 3 4 5 . stop 84 0 1 6 .
+
+override_dh_installdocs:
+	dh_installdocs --all docs/NEWS docs/README
+
+override_dh_strip:
+	dh_strip --dbg-package=avahi-dbg
 
